--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes"]
 	path = themes
 	url = /Users/rjlewis/Sites/resources/package_template/themes
+[submodule "scss"]
+	path = scss
+	url = /Users/rjlewis/Sites/resources/f4_grid/scss
